server-configuration/django-kubernetes-manifests/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django-container
          image: worldhistoricalgazetteer/web:0.1.4
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-files
              mountPath: /app/static
            - name: media-files
              mountPath: /app/media
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: django-static-pvc
        - name: media-files
          persistentVolumeClaim:
            claimName: django-media-pvc
